--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,51 @@
+absl-py==2.1.0
 async-timeout==4.0.3
 bleak==0.22.2
+certifi==2024.7.4
+charset-normalizer==3.3.2
 contourpy==1.2.1
 cycler==0.12.1
+ecapture==2.0.2
+filelock==3.15.4
 fonttools==4.53.1
+fsspec==2024.6.1
+grpcio==1.65.1
+huggingface-hub==0.24.2
+idna==3.7
+importlib_metadata==8.2.0
 importlib_resources==6.4.0
+Jinja2==3.1.4
 kiwisolver==1.4.5
+Markdown==3.6
+MarkupSafe==2.1.5
 matplotlib==3.9.1
+mpmath==1.3.0
 networkx==3.2.1
 numpy==2.0.1
+opencv-python==4.10.0.84
 packaging==24.1
 pillow==10.4.0
+protobuf==4.25.4
 pyobjc-core==10.3.1
 pyobjc-framework-Cocoa==10.3.1
 pyobjc-framework-CoreBluetooth==10.3.1
 pyobjc-framework-libdispatch==10.3.1
 pyparsing==3.1.2
+pyrealsense2-macosx==2.54.2
 python-dateutil==2.9.0.post0
+PyYAML==6.0.1
+regex==2024.7.24
+requests==2.32.3
+safetensors==0.4.3
 scipy==1.13.1
 six==1.16.0
+sympy==1.13.1
+tensorboard-data-server==0.7.2
+tokenizers==0.19.1
+torch==2.4.0
+tqdm==4.66.4
+transformers==4.43.3
 typing_extensions==4.12.2
+urllib3==2.2.2
+Werkzeug==3.0.3
 zipp==3.19.2
